# app/Models/User.php
@@ -7,11 +7,22 @@ use Database\Factories\UserFactory;
 use Illuminate\Database\Eloquent\Attributes\Fillable;
 use Illuminate\Database\Eloquent\Attributes\Hidden;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Relations\BelongsToMany;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
 use Laravel\Sanctum\HasApiTokens;
 
-#[Fillable(['name', 'email', 'password', 'avatar_url', 'locale',"google_id"])]
+#[Fillable([
+    'name',
+    'email',
+    'password',
+    'avatar_url',
+    'locale',
+    'google_id',
+    'eco_points',
+    'culture_points',
+    'path_points',
+])]
 #[Hidden(['password', 'remember_token'])]
 class User extends Authenticatable
 {
@@ -28,6 +39,15 @@ class User extends Authenticatable
         return [
             'email_verified_at' => 'datetime',
             'password' => 'hashed',
+            'eco_points' => 'integer',
+            'culture_points' => 'integer',
+            'path_points' => 'integer',
         ];
+    }
+
+    public function favorites(): BelongsToMany
+    {
+        return $this->belongsToMany(Destination::class, 'user_favorite_destinations')
+            ->withTimestamps();
     }
 }
